# fedikit

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.rst  pyproject.toml
examples/blog/: .env  .env.sample  README.rst  pyproject.toml
examples/blog/fediblog/: app.py  data.py  db.py  federation.py
examples/blog/fediblog/templates/: index.html  layout.html  post.html  setup.html
fedikit/: __init__.py  uri.py  version.py
fedikit/federation/: collection.py  server.py
fedikit/model/: __init__.py  converters.py  descriptors.py  docloader.py  entity.py  langstr.py  scalars.py
fedikit/vocab/: __init__.py  activity.py  actor.py  collection.py  document.py  intransitive_activity.py  link.py  object.py
fedikit/webfinger/: jrd.py
tests/: conftest.py
tests/federation/: server_test.py
tests/fixtures/example.com/: bar  foo
tests/model/: converters_test.py  docloader.py  entity_test.py  langstr_test.py
tests/vocab/: activity_test.py  actor_test.py  link_test.py  object_test.py
tests/webfinger/: jrd_test.py
