[project]
name = "FediKit"
description = "A Pythonic interface to the Fediverse"
readme = "README.rst"
keywords = [
  "activitypub",
  "activitystreams",
  "federation",
  "fediverse",
  "social media",
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Communications",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
  "Topic :: Internet :: WWW/HTTP :: WSGI :: Middleware",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
authors = [
  { name = "Hong Minhee (洪 民憙)", email = "hong@minhee.org" },
]
license = { file = "LICENSE" }
requires-python = ">= 3.12"
dynamic = ["version"]

dependencies = [
  "cryptography >= 40.0.0",
  "Hypercorn >= 0.16.0, < 1.0.0",
  "isoduration ~= 20.11.0",
  "langcodes ~= 3.3.0",
  "PyLD[requests] ~= 2.0.3",
  "Werkzeug >= 2.0.0, < 4.0.0",
]

[project.optional-dependencies]
dev = [
  "asgi-tools ~= 0.76.0",
  "black ~= 23.12.1",
  "flake8 ~= 6.1.0",
  "flake8-bugbear ~= 23.12.2",
  "mypy ~= 1.8.0",
  "pyproject-flake8 ~= 6.1.0",
  "pytest ~= 7.4.3",
  "pytest-asyncio ~= 0.23.2",
  "pytest-mypy ~= 0.10.3",
]

[build-system]
requires = ["flit-core >= 3.9, < 4"]
build-backend = "flit_core.buildapi"

[tool.black]
line-length = 79
target-version = ["py312"]
preview = true

[tool.flake8]
max-line-length = 79
extend-ignore = ["E203", "E501", "E704", "W503"]

[tool.isort]
profile = "black"
line_length = 79

[tool.mypy]
strict = true
files = ["fedikit", "tests"]
scripts_are_modules = true

[[tool.mypy.overrides]]
module = ["isoduration.*", "pyld.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
addopts = "--mypy"
testpaths = ["fedikit", "tests"]
filterwarnings = [
  "ignore::DeprecationWarning:dateutil.tz.tz",
]
