[tool.poetry]
name = "FediBlog"
version = "0.1.0"
description = "ActivityPub-enabled federated blog"
authors = ["Hong Minhee (洪 民憙) <hong@minhee.org>"]
license = "LGPL-3.0-or-later"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.12"
FediKit = {path = "../..", develop = true}
Quart = "^0.19.4"
python-dotenv = "^1.0.0"
aiosqlite = "^0.19.0"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
